--- a/fracment/app/src/main/res/values/strings.xml
+++ b/fracment/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="sendmessage">"WhatsApp will send an SMS message to verity your phone number. Enter your country code and phone number:"
+    </string>
+    <string name="end">Carrier SMS charges may apply</string>
+
+
+
+
 </resources>
